# gz_terrain_gen

./: AGENTS.md  README.md  arhitecture.md  env.sh  plan0.md  pyproject.toml
docs/: application_flow.md  architecture.md  code_review.md  dem_source.md  development.md  gazebo.md  husky.md  metadata_design.md
plans/: 000_initial_roadmap.md  001_uv_project_conversion.md  002_remove_legacy_code_folder.md  003_reorganize_docs_and_agent_instructions.md  004_world_name_output_and_metadata.md  005_migrate_cli_to_click.md  006_add_loguru_logging.md  007_single_command_optional_world_output.md  008_browser_viewer_combined_mesh.md  009_normalize_mesh_z_axis.md  010_auto_gazebo_gui_camera.md  011_cli_start_and_summary_banners.md  012_existing_dem_file_input.md  013_probe_camera_and_level_geometry.md  014_move_application_flow_to_main.md  015_agent_data_shape_conventions.md  016_refactor_fixed_data_shapes_to_dataclasses.md  017_refactor_run_pipeline_stages.md  018_replace_pipeline_echo_with_logs.md  019_metadata_dataclasses.md  020_metadata_design_document.md  021_remove_gazebo_viewer_from_metadata_design.md  022_remove_dem_from_metadata_design.md  023_align_metadata_design_text_with_diagram.md  024_update_application_metadata_usage_to_new_shape.md  025_application_block_flow_diagram.md  026_agent_python_module_docstring_conventions.md  027_dem_source_class_hierarchy.md  028_enforce_gazebo_string_constants.md  029_add_husky_diffdrive_plugin.md  030_fix_husky_material_script_uri.md  README.md
tests/: test_cli.py  test_dem_source.py  test_gazebo.py  test_log_config.py  test_mesh.py  (+2 more)
(+25 files in other folders)
